[레거시 코드 리팩터링 - 2단계] 크리스(공병주) 미션 제출합니다. (#299)
* chore(MenuGroupServiceTest): eof 추가

* refactor(DatabaseCleaner): Connection 자원 해제

* refactor(Product): Product 리팩토링

* refactor(MenuGroup): MenuGroup 리팩토링

* refactor(Menu): Menu 리팩토링

* refactor(OrderTable): OrderTable 리팩토링

* refactor(Order): Order 리팩토링

* refactor(test): 중복 Repository 제거 및 픽스쳐 분리

* refactor(InvalidGuestNumberException): 예외 메시지 구체화

* refactor(OrderTable): 예외 구체화

* refactor: 불필요한 코드 제거

* refactor: 예외 구체화

* refactor: Menu가 MenuProduct의 영속성을 관리하도록 수정

* refactor: 불필요한 setter 제거

* refactor: 불필요한 메서드 삭제

* refactor: 모든 Repository에 @Repository 등록

* refactor: 메뉴 그룹 생성 반환 타입 변경

* refactor: 생성자 정리

* refactor: 정적팩토리와 생성자 구분

* refactor: EAGER LOADING 삭제

* refactor: BigDecimal에서 제공하는 ZERO 사용

* refactor: eof 추가

* refactor: Order 생성 전략 정적팩토리로 수정

* refactor: 중복 request uri @RequestMapping으로 제거

* refactor: request response dto 분리